# clairvoyance

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog  LICENSE  Makefile  README.md  configure  mkpkg.sh
cmake/: FindLIBJPEG.cmake
include/: clairvoyance.h
src/: CMakeLists.txt  base.c  base.h  clairvoyance_bin.c  draw.c  draw.h  image.c  image.h  io.c  io.h  iobmp.c  iobmp.h  iojpeg.c  iojpeg.h  iopng.c  iopng.h
